# meshlite

./: .gitignore  AUTHORS  Cargo.toml  README.md  appveyor.yml  dtrace_script.sh  profile_dtrace.sh  profile_perf.sh  show_obj_in_blender.py
examples/benchmark_subdivide/: main.rs
examples/benchmark_triangulate/: main.rs
examples/obj_export/: main.rs
examples/subdiv_benchmark/: main.rs
ffi/: Cargo.toml  LICENSE  README.md  appveyor.yml
ffi/src/: lib.rs
include/: meshlite.h
src/: bmesh.rs  debug.rs  iterator.rs  lib.rs  main.rs  mesh.rs  primitives.rs  skeletonmesh.rs  subdiv.rs  subdivide.rs  triangulate.rs  util.rs  wavefront.rs  wrap.rs
tests/: integration_tests.rs
