[package]
name = "meshlite"
version = "0.2.0"
authors = ["Jeremy HU <huxingyi@msn.com>", "anderejd <https://github.com/anderejd>"]

# Uncomment when using the profiler script
# [profile.release]
# debug = true

[lib]
name = "meshlite"
crate-type = ["lib"]

[dependencies]
cgmath = "0.16"
petgraph = "0.4"
fnv = "1"
smallvec = "0.6"
